# fps6-assets

./: .gitignore  CMakeLists.txt  README.md  build-img.bat
assets/: barrel.dds  barrel.md2  barrel1.dds  barrel2.dds  barrelexp1.dds  barrelexp2.dds  barrelexp3.dds  barrelexp4.dds  barrelexp5.dds  caco.dds  caco.md2  cacoeye.dds  cacoeye.md2  cacomouth.dds  cacomouth.md2  cacoskirt.dds  cacoskirt.md2  ceiling.dds  chaingun.dds  door.dds  floor.dds  fork.dds  gun.dds  menu.dds  monster1.dds  monster2.dds  monster3.dds  monster4.dds  monsterdead1.dds  monsterdead2.dds  monsterdead3.dds  monsterdead4.dds  monsterdead5.dds  monsterdead6.dds  monsterdead7.dds  monsterdead8.dds  palm.dds  palm.modb  plant.dds  plant.modb  (+8 more)
src/: Main.cpp
